[fix bug 1741322] OP9 had the problem too. Caused by overflow:hidden on .yui-dt-liner. Now setting overflow hidden only when sized via _setColumnWidth.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -7,10 +7,6 @@
     border-bottom:none;
 }
 
-.yui-dt-liner {
-    overflow:hidden;
-}
-
 /* a11y headers */
 .yui-dt-hd {
     display: none;
